app/assets/stylesheets/pages/_landing.scss
.steligence-container{
  margin-left: calc(50% - 450px;);
  width: 900px;
}

@media(max-width: 900px){
  .steligence-container{
    margin-left: 0;
    width: auto;
  }
}

.registered {
  font-size: 70% !important;
  vertical-align: super !important;
  h5{
    font-size: 70% !important;
    vertical-align: super !important;
  }
}

#fale-conosco {
  display: none;
}

// INICIO BANNER PRINCIPAL -->
.banner-carousel{
  height: 600px;
}
#main-banner {
  color: white;
  text-align: center;
  width: 100%;
  height: 600px;
  /* if you have a 70px navbar => height: calc(100vh - 70px); */
  background-size: cover !important;
  background-position: center center;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.banner1-logo{
  width: 80%;
  padding: 0 14%;
  margin-top: 100px;
}

.banner-02-bg{
  background: image_url('banner-03-alt.png');
  background-position: 60% 0 !important;
}

.banner3-logo{
  width: 80%;
  padding: 0 14%;
  margin-top: 100px;
  margin-left: 20%;
}

.spacer{
  height: 40px;
}

.space-title{
  margin-top: 16%;
  margin-left: 28%;
}

.space-line{
  display: flex;
  justify-content: space-between;
  margin: 4% 0;
  padding: 0 14%;
  div{
    border-style: solid;
    border-width: 3px;
    height: 0;
    width: 16px
  }
  span{
    width: 24px;
  }
  .large-drop{
    width: 72px;
  }
}

.mobile-hidden{
  display: none;
}

.desktop-hidden{
  display: block;
}

.line-recolor{
  div{
    border-color: $steligence-orange;
  }
}

.description-text{
  text-align: left;
  word-spacing: 0;
  padding: 0 14%;
  font-size: 12px;
}

.quote{
  margin-top: 12%;
  margin-left: 50%;
  text-align: right;
  width: 50%;
  padding-right: 7%;
  color: $steligence-gray;
  h5{
    color: $steligence-orange;
    font-size: 1.1rem;
  }
  p:last-of-type{
    font-size: 10px;
  }
}

.button-position{
  padding: 0 14%;
  display: flex;
  justify-content: flex-end;
}

.more-info{
  border-style: solid;
  border-width: thin;
  border-radius: 8px;
  width: 120px;
  a {
    text-decoration: none;
    color: white;
    &:hover {
      color:white;
    }
  }
}

.button-position-quote{
  padding: 0 7%;
  display: flex;
  justify-content: flex-end;
}

.more-info-color{
  border-style: solid;
  border-width: thin;
  border-radius: 8px;
  width: 120px;
  color: $steligence-gray;
    a {
    text-decoration: none;
    color: $steligence-gray;
    &:hover {
      color:$steligence-gray;
    }
  }
}

.sub-header{
  margin: 0 14%;
  margin-top: 16%;
  h5{
    text-align: left;
    position: relative;
  }
}

// CAROUSEL
.carousel{
  width: 100%;
}

.slick-slider{
  margin: 0;
}

.slick-arrow{
  z-index: 1;
  opacity: 1;
  transition: 0.5s;
}

.slick-disabled{
  opacity: 0;
  transition: 0.5s;
}

.slick-dots{
  bottom: 16px;
}

.slick-dots li button:before{
  color: white;
  opacity: 1;
  font-size: 12px;
}

.slick-dots li.slick-active button:before{
  color: $main-color;
  opacity: 1;
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
}

.left-arrow{
  position: absolute;
  top: 50%;
  left: 4%;
  background: image-url('left-arrow.svg');
  height: 30px;
  width: 15px;
}

.right-arrow{
  position: absolute;
  top: 50%;
  right: 4%;
  background: image-url('right-arrow.svg');
  height: 30px;
  width: 15px;
}

// FIM BANNER PRINCIPAL -->

// INICIO PILARES -->
#pilares {
 width: 100%;
 text-align: center;
 padding: 8%;
 margin-bottom: 40px;
}
.cornerstone-topic{
  display: inline-block;
  border-style: solid;
  border-radius: 8px;
  padding: 2px;
  margin: 6px;
  border-color: $steligence-gray;
  border-width: thin;
  color: $steligence-orange;
  font-size: 14px;
  font-family: $vagrounded-bold;
}
.cornerstone-wrapper{
  background-color: $steligence-catalog;
  position: relative;
}
.cornerstone-image-wrapper-intro{
  height: 150px;
  margin-top: 130px;
  margin-left: 70px;
  img{
    object-fit: scale-down;
    padding-right: 50px;
  }
  display: flex;
  justify-content: center;
}
.cornerstone-intro{

    font-size: 19px;
    width: 264px;
    line-height: 1.6em;
    margin: 30px auto;
}

.cornerstone-image-wrapper{
  img{
    height: 200px;
  }
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 80px;
}
.cornerstone-text{
  width: 100%;
  padding: 40px;
  font-family: $vagrounded-regular;
}

.white-stripes{
  position: absolute;
  z-index: 1;
}
.orange-stripes{
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 1;
}
// FIM PILARES -->

// INICIO DIFERENCIAIS -->
.differential-wrapper{
  padding: 7%;
  background-image: image-url('differential-bg.png');
  background-position: 50% 100%;
  background-repeat: no-repeat;
  background-color: $steligence-light;
}

.differential-10{
  margin-left: -8px;
  height: 144px;
  background-image: image-url('background-10');
  background-size: contain;
  background-repeat: no-repeat;
  p{
    line-height: 1.5em;
    font-size: 12px;
    margin-left: 100px;
    margin-top: 30px;
    width: 90px;
    font-family: $vagrounded-thin;

  }
}

.differential-main-title{
  padding-bottom: 0;
  display: flex;
  justify-content: space-between;
}

.small-slogan{
  margin: 0;
  margin-left: 76px;
  font-size: 8px;
  width: 30px;
  font-weight: bold;
}

.small-product-name{
  font-size: 24px;
  color: $steligence-orange;
  position: relative;
}

.micro-registered{
  font-size: 10px;
  position: absolute;
  top: 0;
  right: -4px;
}

#diferenciais {
  margin-top: 32px;
  width: 100%;
  height: 440px;
  p{
    width: 144px;
  }
}

.differential-title{
  color: $steligence-orange;
  font-size: 14px;
  margin-top: 10px;
  font-family: $vagrounded-regular;
  line-height: 1.1em;
  letter-spacing: 1px;
  height: 42px;
}

.differential-text{
  font-size: 12px;
}

.differential-stripe{
  margin-top: 8px;
  width: 100%;
  border-style: solid;
  border-width: 4px;
  border-color: $steligence-orange;
}

.differential-image{
  width: 144px;
  height: 144px;
  object-fit: cover;
}
/* ... */

